--- a/src/pages/navbar/nav.css
+++ b/src/pages/navbar/nav.css
@@ -454,7 +454,7 @@
         gap: 5px;
         cursor: pointer;
         margin-left: auto;
-        z-index: 1100;
+        z-index: 1101;
         order: 2;
     }
 
@@ -465,22 +465,26 @@
         border-radius: 2px;
     }
 
+    
     .nav-links {
-        display: none;
-        position: absolute;
-        top: 30px;
+        position: fixed;
+        top: 0;
+        right: 0;
+        height: 100vh;
+        width: 300px;
         flex-direction: column;
         background-color: black;
-        padding: 15px 20px;
-        border-radius: 0px;
-        gap: 10px;
-        width: 150px;
-        z-index: 1000;
+        padding: 20px;
+        gap: 15px;
+        z-index: 1100;
+
+        transform: translateX(100%);
+        transition: transform 0.3s ease-in-out;
     }
 
+    
     .nav-links.show {
-        display: flex;
-        margin-left: 120px;
+        transform: translateX(0);
     }
 
     .btn {
@@ -518,18 +522,19 @@
     }
 
     .dropdown-menu {
-        width: calc(100% - 20px); 
-        left: 10px; 
-        right: 10px; 
-        box-sizing: border-box; 
+        width: calc(100% - 20px);
+        left: 10px;
+        right: 10px;
+        box-sizing: border-box;
     }
 
     .cart-dropdown {
-        right: auto; 
-        left: 50%; 
-        transform: translateX(-50%); 
+        right: auto;
+        left: 50%;
+        transform: translateX(-50%);
     }
 }
+
 
 @media screen and (max-width: 769px) {
     .navbar {
@@ -558,7 +563,7 @@
         gap: 5px;
         cursor: pointer;
         margin-left: auto;
-        z-index: 1100;
+        z-index: 1101;
         order: 2;
     }
 
@@ -569,20 +574,26 @@
         border-radius: 2px;
     }
 
+   
     .nav-links {
-        display: none;
-        position: absolute;
-        top: 100%;
-        left: 0;
-        width: 100%;
+         position: fixed;
+        top: 0;
+        right: 0;
+        height: 100vh;
+        width: 80%; 
+        max-width: 350px; 
         flex-direction: column;
         background-color: black;
-        z-index: 1000;
+        padding: 25px;
+        gap: 20px;
+        z-index: 1100;
+        transform: translateX(100%);
+        transition: transform 0.3s ease-in-out;
     }
 
+    
     .nav-links.show {
-        display: flex;
-        margin-left: 120px;
+        transform: translateX(0);
     }
 
     .btn {
@@ -621,14 +632,14 @@
     }
 
     .dropdown-menu {
-        position: fixed; 
-        right: 10px;    
-        left: auto;     
-        top: 70px;      
-        width: calc(100% - 20px); 
-        max-width: 100px; 
-        transform: none; 
-        box-sizing: border-box; 
+        position: fixed;
+        right: 10px;
+        left: auto;
+        top: 70px;
+        width: calc(100% - 20px);
+        max-width: 100px;
+        transform: none;
+        box-sizing: border-box;
         z-index: 1000;
     }
 
