--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -130,7 +130,7 @@
 .register-prompt {
     margin-top: 25px;
     font-size: 14px;
-    color: var(--secondary-color);
+    color: var(--text-color);
 }
 
 .create-account {
