now auto accessory can be add to cart

--- a/src/pages/favorites/favorites.css
+++ b/src/pages/favorites/favorites.css
@@ -31,7 +31,7 @@
 
 
 .favorite-item-card {
-  background: #fff;
+  background: #fcfcfc;
   border-radius: 12px;
   padding: 1rem;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
