--- a/src/pages/AutoAccessoriesPage/MatsPage.css
+++ b/src/pages/AutoAccessoriesPage/MatsPage.css
@@ -6,26 +6,25 @@
 }
 
 .mats-search-form {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 10px;
-    align-items: center;
-    justify-content: center;
-    padding: 30px 15px;
-    max-width: 950px;
-    margin: 30px auto;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  padding: 30px 15px;
+  max-width: 950px;
+  margin: 30px auto;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-
 .select-wrapper {
-    flex-grow: 1;
-    min-width: 150px;
-    max-width: 200px;
-    flex-shrink: 1;
+  flex-grow: 1;
+  min-width: 150px;
+  max-width: 200px;
+  flex-shrink: 1;
 }
 
 .select-param {
@@ -217,7 +216,9 @@
 }
 
 @media (max-width: 768px) {
+  /* СТИЛОВЕ ЗА ФОРМАТА ЗА ТЪРСЕНЕ */
   .mats-search-form {
+    /* Формата става вертикална на таблети и телефони */
     flex-direction: column;
     flex-wrap: wrap;
     padding: 20px 5px;
@@ -226,13 +227,65 @@
   }
 
   .select-wrapper {
+    /* Селекторите заемат цялата ширина */
     width: 100%;
     max-width: 100%;
   }
 
   .search-mats-button-new {
+    /* Бутонът за търсене също заема цялата ширина */
     width: 100%;
     height: 50px;
     padding: 10px;
+  }
+}
+
+
+@media (max-width: 550px) {
+  .mats-grid {
+    
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
+    padding: 0 10px;
+  }
+
+  .mat-card {
+    padding: 10px;
+    border-radius: 8px;
+  }
+
+  .mat-image {
+    height: 120px;
+    margin-bottom: 10px;
+  }
+
+  .mat-card h3 {
+    font-size: 1.1em;
+    height: 35px;
+    line-height: 1.1;
+  }
+
+  .mat-card p {
+    font-size: 0.8em;
+    margin: 1px 0;
+  }
+
+  .mats-price-bgn strong {
+    font-size: 1.4rem;
+  }
+
+  .mats-price-eur {
+    font-size: 0.9rem;
+  }
+
+  .mat-buttons-container {
+    gap: 5px;
+    margin-top: 10px;
+  }
+
+  .mat-button-details,
+  .mat-button-buy {
+    padding: 6px;
+    font-size: 0.8rem;
   }
 }
