--- a/src/pages/AutoAccessoriesPage/MatsPage.css
+++ b/src/pages/AutoAccessoriesPage/MatsPage.css
@@ -215,10 +215,37 @@
   margin-top: 50px;
 }
 
+.search-buttons-group {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.reset-mats-button {
+  width: 120px;
+  height: 50px;
+  padding: 10px 20px;
+  flex-shrink: 0;
+  background-color: #555; 
+  color: white;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: background-color 0.2s;
+  margin-bottom: 10px
+}
+
+.reset-mats-button:hover {
+  background-color: #333;
+}
+
 @media (max-width: 768px) {
-  /* СТИЛОВЕ ЗА ФОРМАТА ЗА ТЪРСЕНЕ */
+  
   .mats-search-form {
-    /* Формата става вертикална на таблети и телефони */
     flex-direction: column;
     flex-wrap: wrap;
     padding: 20px 5px;
@@ -227,13 +254,11 @@
   }
 
   .select-wrapper {
-    /* Селекторите заемат цялата ширина */
     width: 100%;
     max-width: 100%;
   }
 
   .search-mats-button-new {
-    /* Бутонът за търсене също заема цялата ширина */
     width: 100%;
     height: 50px;
     padding: 10px;
